# MSML_642_FinalProject

./: hri_reward_log.csv
eval_logs/: evaluations.npz
eval_logs_ppo/: evaluations.npz
ppo_hri_tensorboard/PPO_1/: events.out.tfevents.1764373616.anagha-virtual-machine.5958.0
sac_hri_tensorboard/SAC_1/: events.out.tfevents.1762728439.UbuntuDesktop.5012.0
sac_hri_tensorboard/SAC_10/: events.out.tfevents.1763001613.DesktopNew.61394.0
sac_hri_tensorboard/SAC_11/: events.out.tfevents.1763002645.DesktopNew.62319.0
sac_hri_tensorboard/SAC_12/: events.out.tfevents.1763003294.DesktopNew.62572.0
sac_hri_tensorboard/SAC_13/: events.out.tfevents.1763003867.DesktopNew.62820.0
sac_hri_tensorboard/SAC_14/: events.out.tfevents.1763488280.anagha-virtual-machine.13937.0
src/hri_control/: package.xml  setup.cfg  setup.py
src/hri_control/config/: ur.ros2_control.xacro  ur.urdf.xacro  ur5e_velocity_controllers.yaml  ur_macro.xacro  ur_simple_controllers.yaml
src/hri_control/hri_control/: fk_helper.py  hand_mover.py  hand_simulator.py  hand_simulator_node.py  hri_env.py  hri_env_final.py  hri_node_OLD.py  test.py  test_ppo.py  train.py  train_final.py  train_ppo.py  visualize_ppo.py  vizualize_result.py
src/hri_control/launch/: hri_world.launch.py  safe_launch.py  ur5e_sim_velocity.launch.py
src/hri_control/models/: dummy_hand.urdf  shadow_hand_right.urdf  target_cube.urdf  target_hand.urdf
src/hri_control/models/meshes/visual/: Hand.dae
src/hri_control/urdf/: safe_demo.xacro  ur_on_base.xacro
src/hri_control/worlds/: hri_world.world
(+24 files in other folders)
