<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schetypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hri_control</name>
  <version>0.0.0</version>
  <description>HRI project with RL</description>
  <maintainer email="vboxuser_anagha@todo.todo">vboxuser_anagha</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>

  <exec_depend>python-gymnasium-pip</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
